# MiuMiu

./: .gitignore  README.md  config.py  db.sqlite3  main.py  pyproject.toml  requirements.txt
keyboards/: on_start.py
keyboards/inline_keyboards/: actions_kb.py  info_kb.py  miumiu_kb.py  shop_kb.py  simple_row.py
routers/: __init__.py  admin_handlers.py  common.py  media_handlers.py
routers/callback_handlers/: __init__.py  actions_kb_callback_handlers.py  info_kb_callback_handlers.py  miumiu_kb_callback_handlers.py  shop_kb_callback_handlers.py
routers/commands/: __init__.py  basic_commands.py  user_commands.py
routers/custom/: __init__.py
routers/custom/business/: business.py
routers/custom/business/database/: models.py  requests.py
routers/custom/games/: games.py
routers/custom/mathix/: __init__.py  examples.py  mathix.py
routers/custom/photobot/: deep_ai_txt.txt  photobot.py
routers/survey/: __init__.py  states.py  survey_handlers.py
validators/: email_validators.py
