[tool.poetry]
package-mode = false
#name = "miumiu [main]"
#version = "0.1.0"
#description = ""
#authors = ["Dennis Mattews <alttert@mail.ru>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
email-validator = "^2.1.1"
aiohttp = "^3.9.3"
asyncio = "^3.4.3"
magic-filter = "^1.0.12"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
datetime = "^5.5"
pytz = "^2024.1"
pytesseract = "^0.3.10"
pillow = "^10.2.0"
forex-python = "^1.8"
langdetect = "^1.0.9"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
